--- a/public/assets/css/colors.css
+++ b/public/assets/css/colors.css
@@ -4,8 +4,7 @@
     --primary-color-dark: #8a8987;
     --primary-color-dark-01: #6e6d6b;
 
-    --secondary-color: ;
-
+    --dark-color-light-02: #5c5a5a;
     --dark-color-light-01: #3a3939;
     --dark-color-light: #242323;
     --dark-color: #000;
