--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -20,7 +20,7 @@ header.main_header
     align-items: flex-end;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding-top: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid var(--primary-color);
@@ -66,6 +66,42 @@ main.main_content
 {
     width: var(--width);
     margin: 0 auto;
+}
+
+div.posts
+{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+div.posts figure.posts_item
+{
+    cursor: pointer;
+    width: 170px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+    border-bottom: 1px solid var(--primary-color);
+}
+
+div.posts figure.posts_item div
+{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+div.posts figure.posts_item figcaption
+{
+    margin-bottom: 10px;
+    color: var(--dark-color-light-02);
 }
 
 div.presentation
@@ -143,7 +179,7 @@ footer.main_footer::before
     left: 50%;
     transform: translateX(-50%);
     border-radius: 50%;
-    background-image: linear-gradient(to top, transparent, #e9e8e8, #dddddd, #cac9c9);
+    background-image: linear-gradient(to top, transparent, #e9e8e8, #e9e8e8, #dddddd, #b4b2b2);
 }
 
 footer.main_footer
