--- a/source/views/update.html.twig
+++ b/source/views/update.html.twig
@@ -1,12 +1,17 @@
 {% extends "template/secondaryLayout.html.twig" %}
 
 {% block content %}
-    <form action="{{ route.urlFor('post.store') }}" method="post" enctype="multipart/form-data" class="form">
+    <form action="{{ route.urlFor('post.update') }}" method="post" enctype="multipart/form-data" class="form">
 
-        <div class="message_success">{{ flash.get('success', 'register') }}</div>
+        <div class="message_error">{{ flash.get('error', 'update') }}</div>
+        <div class="message_success">{{ flash.get('success', 'update') }}</div>
+
+        <input type="hidden" name="id" value="{{ post.id ?? '0' }}">
+        <input type="hidden" name="_METHOD" value="PUT"/>
 
         <label for="photo" class="label">
-            <img id="form-photo-preview" src="{{ helper.storage('images/default-image.png') }}" alt="person">
+            <img id="form-photo-preview"
+                src="{{ helper.storage("images/#{post.photo ?? 'default-image.png'}") }}" alt="person">
         </label>
         <input type="file" name="photo" id="photo" class="hidden">
 
@@ -17,9 +22,8 @@
             class="textarea"></textarea>
         
         <div class="message_error">{{ flash.get('error', 'description') }}</div>
-        
 
-        <button type="submit" class="button_submit mt-20">Cadastrar</button>
+        <button type="submit" class="button_submit mt-20">Atualizar</button>
 
     </form>
 {% endblock content %}
